@@ -18,7 +18,7 @@
 .\"
 .\" $Id$
 .\"
-.Dd DATE January 17, 2014
+.Dd DATE November 23, 2014
 .Os
 .Dt AVRDUDE 1
 .Sh NAME
@@ -257,6 +257,8 @@ programmer's entry of the configuration file.
 .It Fl B Ar bitclock
 Specify the bit clock period for the JTAG interface or the ISP clock (JTAG ICE only).
 The value is a floating-point number in microseconds.
+Alternatively, the value might be suffixed with "Hz", "kHz", or "MHz",
+in order to specify the bit clock frequency, rather than a period.
 The default value of the JTAG ICE results in about 1 microsecond bit
 clock period, suitable for target MCUs running at 4 MHz clock and
 above.
